feature/animations - Created animationin profile section

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
     <!-- PROFILE SECTION -->
     <section class="background-pic" id="bg">
       <div class="profile">
-        <section class="profile-pic">
+        <section class="profile-pic" id="pic">
           <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
         </section>
-        <section class="profile-info">
+        <section class="profile-info" id="info">
           <div class="content-info">
             <h1>Federico Sosa</h1>
             <h4>Web Developer</h4>
