feature/animations - Animated the height of the social bar

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
     <!-- PRESENTATION SECTION -->
     <section class="presentation">
-      <div class="social-bar">
+      <div class="social-bar" id="social">
         <include src="social-networks.html"></include>
       </div>
       <div class="text-present">
