feature/animations - Animated the text presentation

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       <div class="social-bar" id="social">
         <include src="social-networks.html"></include>
       </div>
-      <div class="text-present">
+      <div class="text-present" id="txt">
         <h2>Hi I´m Federico</h2>
         <p>I´m web developer. I live in Montevideo, Uruguay. I am currently studying a career related to programming. I love what I do, and adore spend time programming.</p>
       </div>
