Created api.js that obtain the data from API and display it in html

--- a/src/index.html
+++ b/src/index.html
@@ -20,15 +20,9 @@
           <img class="pic" src="profile-pic.jpg" alt="Foto de Perfil">
         </section>
         <section class="profile-info" id="info">
-          <div class="content-info">
-            <h1>Federico Sosa</h1>
-            <h4>Web Developer</h4>
-            <ul>
-              <li><b>Phone:</b><br>+598 95683920</li>
-              <li><b>Email:</b><br>fdsosa.35@gmail.com</li>
-              <li><b>Date of Birth:</b><br>April 28th, 1999</li>
-            </ul>
-            </div>
+          <div class="content-info" id="personal-data">
+            <!-- API DATA -->
+          </div>
         </section>
         <!-- SOCIAL BAR MOBILE -->
         <div class="social-bar-mobile">
@@ -39,104 +33,23 @@
 
     <!-- PRESENTATION SECTION -->
     <section class="presentation">
-      <div class="social-bar" id="social">
-        <include src="social-networks.html"></include>
+      <div class="social-bar" id="socialContainer">
+        <!-- API DATA -->
       </div>
       <div class="text-present" id="txt">
-        <h2>Hi I´m Federico</h2>
-        <p>I´m web developer. I live in Montevideo, Uruguay. I am currently studying a career related to programming. I love what I do, and adore spend time programming.</p>
+        <!-- API DATA -->
       </div>
     </section>
 
     <!-- SKILLS SECTION -->
     <section class="skills" id="skillsSection">
-      <h2 class="title-section">Skills</h2>
-      <hr class="line_skills">
-      <table>
-        <thead>
-          <tr>
-            <th>Subject</th>
-            <th>Progress </th>
-          </tr>
-        </thead>
-        <tfoot>
-          <tr>
-            <td>Git</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background git"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>HTML</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background html"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>CSS</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background css"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>JS</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background js"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>PHP</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background php"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>MySQL</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background mysql"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-          <tr>
-            <td>English</td>
-            <td>
-              <div class='prog-bar-cont'>
-                <div class="prog-bar">
-                  <div class="background english"></div>
-                </div>
-              </div>
-            </td>  
-          </tr>
-        </tfoot>
-      </table>
+      <!-- API DATA -->
     </section>
 
     <!-- CONTACT SECTION -->
     <include src="footer"></include>
 
     <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="api.js"></script>
   </body>
 </html>
